# homeassistant-bpost-integration

./: .gitignore  .pre-commit-config.yaml  README.md  hacs.json  pyproject.toml
.github/workflows/: hass.yml
custom_components/bpost/: __init__.py  binary_sensor.py  bpost_entry_data.py  camera.py  config_flow.py  manifest.json  sensor.py
custom_components/bpost/translations/: nl.json
