[tool.poetry]
name = "homeassistant-bpost-integration"
version = "0.1.0"
description = "Integration of the my bpost app for Home Assistant"
authors = ["Sam Debruyn <sam@debruyn.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
homeassistant = "^2021.11.5"
my-bpost-api = ">=0.2.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
atomic = true
line_length = 120

[tool.black]
line-length = 120

[tool.flake8]
max-line-length = 120
